# hq-games

client/: Cargo.toml  Trunk.toml  index.html
client/src/: initializer.mjs  main.rs
home-page/: .gitignore  Cargo.toml  Rocket.toml  init_database.nu  init_database.py
home-page/src/: api.rs  contexts.rs  db.rs  input.rs  lib.rs  main.rs  model.rs  states.rs  tools.rs
home-page/src/routes/: admin.rs  login.rs  mod.rs
home-page/templates/: index.html.tera  users.html.tera
server/: Cargo.toml  Rocket.toml
server/src/: lib.rs  main.rs
